--- a/assignment3/task3/task3.ipynb
+++ b/assignment3/task3/task3.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 41,
       "metadata": {
         "id": "GRbDexIOoYuY"
       },
@@ -22,7 +22,7 @@
               "True"
             ]
           },
-          "execution_count": 31,
+          "execution_count": 41,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -60,7 +60,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 42,
       "metadata": {
         "id": "eBBJCQpxou3d"
       },
@@ -73,7 +73,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 43,
       "metadata": {
         "id": "1Tv83vzZoygn"
       },
@@ -143,7 +143,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 44,
       "metadata": {
         "id": "vMcP_5zroyY2"
       },
@@ -175,7 +175,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 45,
       "metadata": {
         "id": "0afEJo3qoyRD"
       },
@@ -229,7 +229,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 46,
       "metadata": {
         "id": "w-3eMwJwoyF-"
       },
@@ -263,7 +263,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 47,
       "metadata": {
         "id": "M6FHqaFIpBGF"
       },
@@ -297,12 +297,12 @@
         "                attention_mask=attention_mask,\n",
         "                max_length=max_length,\n",
         "                num_beams=4,                # using beam search with a beam width of 4\n",
-        "                repetition_penalty=2.5,     # increases penalty for repeated tokens\n",
+        "                repetition_penalty=2.0,     # increases penalty for repeated tokens\n",
         "                no_repeat_ngram_size=3,     # prevents any 3-gram from repeating\n",
         "                do_sample=True,             # enables sampling (stochastic generation)\n",
         "                top_k=50,                   # limits the next-token choices to the top 50 tokens\n",
         "                top_p=0.9,                  # alternatively, you could use nucleus sampling\n",
-        "                temperature=1.25,            # a temperature above 1 can add diversity\n",
+        "                temperature=1.2,            # a temperature above 1 can add diversity\n",
         "                early_stopping=True\n",
         "            )\n",
         "\n",
@@ -319,7 +319,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": 48,
       "metadata": {
         "id": "UQ5MPAOgpFSI"
       },
@@ -358,7 +358,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 49,
       "metadata": {
         "id": "YzFOaXr5pFIg"
       },
@@ -380,7 +380,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": 50,
       "metadata": {
         "id": "cp_kgJC1pE4r"
       },
@@ -389,128 +389,122 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Using device: cuda:0\n"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
+            "Using device: cuda:0\n",
             "\n",
             "Epoch 1/5\n",
-            "Training Loss: 2.8785\n",
-            "Validation Loss: 0.1758\n",
+            "Training Loss: 3.8580\n",
+            "Validation Loss: 0.4208\n",
             "\n",
             "Sample Generated Explanations (Validation):\n",
             "GT: the author is pissed at <user> for not getting network in malad.\n",
-            "Pred: this this this this these these thesethesethesethese These These ThesethesetheseThesethesethesethethethethemthemthemmmm m m m M M MM M M & & &&&&^^^ ^^^### # # ### \"# \"# \"# # #\n",
+            "Pred: <<< < < <>>>>,>,>,>.>.>:>.>.>. level level level levels levels levels level levelslevels levels levels Levels levels levels highs highs highs peaks peaks peaks peak peaks peaks spikes peaks peaks peaked peaks peaks plateau peaks peaks heights peaks peaks Peak peaks peaks averages peaks peaks lows peaks\n",
             "----------------------------------------\n",
             "GT: nothing worst than waiting for an hour on the tarmac for a gate to come open in snowy, windy chicago.\n",
-            "Pred: aaa a a a an an an An An AnAn An AnanananANAN ANANANANANIANIANIanianianiatiatiatiifiifiifiFiFiFifififiFiFi FiFiFiwiFiFiWiFiFiFIFiFi fiFiFiBiFi\n",
+            "Pred: gategategate gate gate gate gates gates gates gate gate Gate gate gate fence fence fence barrier barrier barrier wall barrier barrier barriers barriers barriers walls barriers barriers obstacles obstacles obstacles barriers barriers blocks barriers barriers defences barriers barriers blockers barriers barriers blocking barriers barriers channels barriers barriers obstacle barriers barriers sections barriers barriers rails barriers barriers defenses barriers barriers\n",
             "----------------------------------------\n",
             "GT: nobody likes getting one hour of their life sucked away.\n",
-            "Pred: springspringspring spring spring spring springs springs springs sprung sprung sprung sprang sprang sprang popped popped popped pop pop pop Pop Pop PopPop Pop Poppop Pop Pop POP POP POPOPOPOPopopop op op op Opopopopsopopppopoppopopumpopoppoopopup\n",
+            "Pred: springspringspring spring spring spring Spring spring springSpring spring springpringpringpringspringspringpringpring spring springspring springspringpringspring spring springs spring spring burst burst burst bursting burst burst bursts burst burst leaks leaks leaks spills spills spills leaked leaked leaked leaking leaked leaked spilled spilled spilled leaked leaked leak leaks leaks leaked leaked\n",
             "----------------------------------------\n",
             "\n",
             "Evaluation Metrics on Validation Set:\n",
-            "ROUGE-1: 0.0289\n",
-            "ROUGE-2: 0.0006\n",
-            "ROUGE-L: 0.0277\n",
-            "BLEU: 0.0022\n",
-            "METEOR: 0.0212\n",
-            "BERTScore_F1: 0.7548\n",
+            "ROUGE-1: 0.0249\n",
+            "ROUGE-2: 0.0010\n",
+            "ROUGE-L: 0.0234\n",
+            "BLEU: 0.0019\n",
+            "METEOR: 0.0235\n",
+            "BERTScore_F1: 0.7646\n",
             "\n",
             "Epoch 2/5\n",
-            "Training Loss: 0.4620\n",
-            "Validation Loss: 4.2913\n",
+            "Training Loss: 0.2112\n",
+            "Validation Loss: 0.0127\n",
             "\n",
             "Sample Generated Explanations (Validation):\n",
             "GT: the author is pissed at <user> for not getting network in malad.\n",
-            "Pred: user author author author writer author author the author author is a a a an author author authority author author reviewer author author book author author's author author person author author researcher author author president author author interested author author his author author reader author author man author authorwriter author author character author author photographer author author director author\n",
+            "Pred: <<< < < <<<>>>>,>,>,>.>.>.>:>:>:%:%:':%:%:%::\\%:%:\":%:%:!:%:%::%:%: :%:%:::%:%::'%:%:%,%:%:^%:%: (~%:%:64%:%:*:%:\n",
             "----------------------------------------\n",
             "GT: nothing worst than waiting for an hour on the tarmac for a gate to come open in snowy, windy chicago.\n",
-            "Pred: the isn doesn's't't't don't't aren't't is to to to make to to for to to see to to a to to the to to there to to look to to have to to about to to author to to find to to play to to and to to get to to read to\n",
+            "Pred: theretherethereThere there there there There there there here here here Here here hereHere here here this this thisThis this this This this thisthis this this these these thesethesethesetheseThese these these These these these THESE these theseThese thesethese these these such such such Such such suchsuchsuchsuchSuch\n",
             "----------------------------------------\n",
             "GT: nobody likes getting one hour of their life sucked away.\n",
-            "Pred:  author author author isn't't't doesn't't aren't't don't't's't't not't't didn't't won't't to to to be to to for to to see to to is to to find to to make to to look to to have to to the to to a to to\n",
+            "Pred: thisthisthisThis this this This this this this these these thesethesethesetheseThese these these These these these those these these such such suchsuchsuchsuchSuch such such so so so So So SoSoSoSo So SosososoSOSOSO SO SO SOSOSOsosoososo\n",
             "----------------------------------------\n",
             "\n",
             "Evaluation Metrics on Validation Set:\n",
-            "ROUGE-1: 0.0914\n",
-            "ROUGE-2: 0.0159\n",
-            "ROUGE-L: 0.0723\n",
-            "BLEU: 0.0046\n",
-            "METEOR: 0.0706\n",
-            "BERTScore_F1: 0.7816\n",
+            "ROUGE-1: 0.0245\n",
+            "ROUGE-2: 0.0002\n",
+            "ROUGE-L: 0.0240\n",
+            "BLEU: 0.0024\n",
+            "METEOR: 0.0191\n",
+            "BERTScore_F1: 0.7558\n",
             "\n",
             "Epoch 3/5\n",
-            "Training Loss: 0.2820\n",
-            "Validation Loss: 0.0161\n",
+            "Training Loss: 0.0709\n",
+            "Validation Loss: 0.0080\n",
             "\n",
             "Sample Generated Explanations (Validation):\n",
             "GT: the author is pissed at <user> for not getting network in malad.\n",
-            "Pred: thisthisthisThisthisthis this this this these these thesethesethesetheseThese these these such such suchsuchsuchsuchsimilarsimilarsimilar analogous analogous analogous comparable comparable comparable similar similar similar different different distinct distinct distinct contrasting contrasting contrasting contradictory contradictory contradictory conflicting contradictory contradictory oppos oppos oppos contrasts contrasts contrasts differences differences differences difference difference\n",
+            "Pred: thisthisthisThisthisthis this this this these these thesethesethesetheseThese these these those these these such such such so so so that that thatthatthatthatThatThatThat ThatThatThatthatthat that that which which whichwhichwhichwhichwhowhowho who who who whom who who whoever who who\n",
             "----------------------------------------\n",
             "GT: nothing worst than waiting for an hour on the tarmac for a gate to come open in snowy, windy chicago.\n",
-            "Pred: thisthisthisThis this this This this this this these these thesethesethesetheseThese these these such such suchsuchsuchsuchSuch such such Such such such similar similar similarsimilarsimilarSimilarsimilarsimilarsimilarimilarsimilarsimilar similarities similarities similarities distinctions distinctions distinctions differences differences differences difference difference difference between between between different different different\n",
+            "Pred: thisthisthisThisthisthis this this this these these thesethesethesetheseThese these these These these these are are are aren aren aren weren weren weren wasn wasn wasn didn didn didn hadn hadn hadn hasn hasn hasn haven haven haven Haven Haven HavenhavenhavenhavenavenavenavenVENVENVENavenavenvenaven\n",
             "----------------------------------------\n",
             "GT: nobody likes getting one hour of their life sucked away.\n",
-            "Pred: springspringspringSpringspringspring spring spring spring Spring spring spring summer summer summer winter winter winterwinterwinterWinterwinterwinterwinterseasonseasonseasontimetimetimetimestimestimesTimesTimesTimes TimesTimesTimes times times times days days days mornings mornings mornings weekends weekends weekends Sundays Sundays Sundays weekends weekends weekend weekends weekends Saturdays Sundays\n",
+            "Pred: thisthisthisThis this this this these these thesethesethesetheseThese these these those those those these these such such suchsuchsuchsuchSuch such such so so so So So SoSoSoSo So SosososoSOSOSO SO SO SO very very very extremely extremely extremely incredibly extremely exceptionally extremely extremely\n",
             "----------------------------------------\n",
             "\n",
             "Evaluation Metrics on Validation Set:\n",
             "ROUGE-1: 0.0215\n",
-            "ROUGE-2: 0.0007\n",
-            "ROUGE-L: 0.0213\n",
-            "BLEU: 0.0023\n",
+            "ROUGE-2: 0.0000\n",
+            "ROUGE-L: 0.0207\n",
+            "BLEU: 0.0019\n",
             "METEOR: 0.0165\n",
-            "BERTScore_F1: 0.7528\n",
+            "BERTScore_F1: 0.7520\n",
             "\n",
             "Epoch 4/5\n",
-            "Training Loss: 0.0301\n",
-            "Validation Loss: 0.0070\n",
+            "Training Loss: 0.0366\n",
+            "Validation Loss: 0.0016\n",
             "\n",
             "Sample Generated Explanations (Validation):\n",
             "GT: the author is pissed at <user> for not getting network in malad.\n",
-            "Pred: thisthisthisThis this this this these these thesethesethesetheseThese these these such such suchsuchsuchsuchSuch such such Such such such so so so SO SO SOSOSOSOsososoSo So So So so so anyway anyway anyway anyways anyways anyways hey hey heyHey hey heyheyheyhey\n",
+            "Pred: <<< < < <><><>< < <>:>:>: : : :::: : :':':':\":':'::':':'':':(':':' (':':'':':' \"':':':\":':'\"':':'`:':'-':':''.:':' '\n",
             "----------------------------------------\n",
             "GT: nothing worst than waiting for an hour on the tarmac for a gate to come open in snowy, windy chicago.\n",
-            "Pred: nothingnothingnothing nothing nothing nothing anything anything anything everything everything everything everyone everyone everyone everybody everybody everybody everyone everyone everywhere everywhere everywhere anywhere anywhere anywhere anyone anyone anyone anybody anyone anyone else else else or or or even even even actually actually actually really really really REALLY REALLY REALLY kinda kinda kinda pretty pretty pretty crazy crazy crazycrazycrazy\n",
+            "Pred: thisthisthisThisthisthis this this this This this this these these thesethesethesetheseThesethesethese These these these such such suchsuchsuchsuchSuch such such so so so therefore therefore therefore thus thus thus thereby thereby thereby simultaneously simultaneously simultaneously concurrently concurrently simultaneously simultaneously together together together along along along with with with\n",
             "----------------------------------------\n",
             "GT: nobody likes getting one hour of their life sucked away.\n",
-            "Pred: springspringspringSpringspringspring spring spring Spring spring spring spring springs springs springs sprung sprung sprung sprang sprang sprang burst burst burst bursting bursting bursting bursts bursts bursts bubbles bubbles bubbles bubble bubbles bubbles bub bub bub Bub Bub Bubbubbubbububububobububhubhubhub hub hub hub Hub Hub hub hub\n",
+            "Pred: springspringspringSpringspringspring spring spring spring springs springs springs sprung sprung sprung sprang sprang sprang sprung sprung burst burst burst bursting bursting bursting spilling spilling spilling leaking leaking leaking leaked leaked leaked leak leak leak leaks leaks leaks leaking leaking leakage leak leak leaked leaked spilled leaked leaked released leaked leaked leaking leaking disclosing disclosing disclosing releasing leaking\n",
             "----------------------------------------\n",
             "\n",
             "Evaluation Metrics on Validation Set:\n",
-            "ROUGE-1: 0.0175\n",
+            "ROUGE-1: 0.0139\n",
             "ROUGE-2: 0.0002\n",
-            "ROUGE-L: 0.0170\n",
-            "BLEU: 0.0018\n",
-            "METEOR: 0.0150\n",
-            "BERTScore_F1: 0.7561\n",
+            "ROUGE-L: 0.0139\n",
+            "BLEU: 0.0015\n",
+            "METEOR: 0.0118\n",
+            "BERTScore_F1: 0.7542\n",
             "\n",
             "Epoch 5/5\n",
-            "Training Loss: 0.0205\n",
-            "Validation Loss: 0.0019\n",
+            "Training Loss: 0.0204\n",
+            "Validation Loss: 0.0014\n",
             "\n",
             "Sample Generated Explanations (Validation):\n",
             "GT: the author is pissed at <user> for not getting network in malad.\n",
-            "Pred: thisthisthis this this this these these thesethese these these such such suchsuchsuchsuch Such such such so so so So So SoSo So So SO SO SOsososoooooooooooooooooooooaaaaaaaaaaaaaaaaaaaaaaaaaaaaaAAAAAAAAAAAAAAAAAAA\n",
+            "Pred: <<< < < <>>>>,>,>,>.>.>.>:>:>::\\>:>:*:>:>: :>:>:':>:>:?:>:>: ):>:>: (~>:>:><>:>: \"<>:>:%:>:>:>[>:>:]:>:>:697>:>::(>:>:ilon\n",
             "----------------------------------------\n",
             "GT: nothing worst than waiting for an hour on the tarmac for a gate to come open in snowy, windy chicago.\n",
-            "Pred: thisthisthisThis this this this these these thesethesethesetheseThese these these such such suchsuchsuchsuch Such such such so so so SO SOSOSOSO SO SO SOsososoSo So So So so so very very very VERY VERY very very extremely very very quite very very pretty very very\n",
+            "Pred: ititit it it itIt it it its its its their their theirtheirtheirtheiryouryouryourYourYourYour your your your Your Your Your your your own own own personal personal personal private private private Private Private PrivatePrivate Private PrivateprivateprivateprivatePrivatePrivatePrivateprivatePrivateprivateprivate Private Private private private\n",
             "----------------------------------------\n",
             "GT: nobody likes getting one hour of their life sucked away.\n",
-            "Pred: springspringspringpringspringspring spring spring spring summer summer summer season season season year year year week week week weeks weeks weeks weekly weekly weeklyweeklyweeklyweekly Weekly Weekly Weekly weekly weekly quarterly weekly weekly daily weekly weekly monthly weekly weekly random random randomRandom random randomrandom random random Random random random randomly random random unpredictable random\n",
+            "Pred: ititit it it it It it itIt it it its its its their their theirtheirtheirtheiryouryouryourYourYourYouryouryour your your your own own own personal personal personal private private private Private Private Private private privateprivateprivateprivatePrivate private private privately private private confidential private private intimate intimate intimate\n",
             "----------------------------------------\n",
             "\n",
             "Evaluation Metrics on Validation Set:\n",
-            "ROUGE-1: 0.0153\n",
+            "ROUGE-1: 0.0177\n",
             "ROUGE-2: 0.0002\n",
-            "ROUGE-L: 0.0151\n",
-            "BLEU: 0.0017\n",
-            "METEOR: 0.0137\n",
-            "BERTScore_F1: 0.7529\n"
+            "ROUGE-L: 0.0177\n",
+            "BLEU: 0.0015\n",
+            "METEOR: 0.0112\n",
+            "BERTScore_F1: 0.7567\n"
           ]
         }
       ],
