--- a/assignment3/task3/task3.ipynb
+++ b/assignment3/task3/task3.ipynb
@@ -370,7 +370,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {
         "id": "cp_kgJC1pE4r"
       },
@@ -381,7 +381,120 @@
           "text": [
             "Using device: cuda:0\n",
             "\n",
-            "Epoch 1/5\n"
+            "Epoch 1/5\n",
+            "Training Loss: 5.8302\n",
+            "Validation Loss: 5.1018\n",
+            "\n",
+            "Sample Generated Explanations (Validation):\n",
+            "GT: the author is pissed at <user> for not getting network in malad.\n",
+            "Pred: >aduserthe is network <itmal. the mal awesome bad for in\n",
+            "----------------------------------------\n",
+            "GT: nothing worst than waiting for an hour on the tarmac for a gate to come open in snowy, windy chicago.\n",
+            "Pred: the a. on to in the for's, an of is snow at snowy airport\n",
+            "----------------------------------------\n",
+            "GT: nobody likes getting one hour of their life sucked away.\n",
+            "Pred: the is. about the spring weather's\n",
+            "----------------------------------------\n",
+            "\n",
+            "Evaluation Metrics on Validation Set:\n",
+            "ROUGE-1: 0.2939\n",
+            "ROUGE-2: 0.0213\n",
+            "ROUGE-L: 0.2029\n",
+            "BLEU: 0.0155\n",
+            "METEOR: 0.1019\n",
+            "BERTScore_F1: 0.8343\n",
+            "\n",
+            "Epoch 2/5\n",
+            "Training Loss: 0.7069\n",
+            "Validation Loss: 0.1663\n",
+            "\n",
+            "Sample Generated Explanations (Validation):\n",
+            "GT: the author is pissed at <user> for not getting network in malad.\n",
+            "Pred: thethethethisthisthis this this this these these thesethesethesetheseThesethesethesetheytheythey they they they them them them him him him he he he him him his his his her her her his his their their their his his your your your own own own personal personal personal private private personal personal\n",
+            "----------------------------------------\n",
+            "GT: nothing worst than waiting for an hour on the tarmac for a gate to come open in snowy, windy chicago.\n",
+            "Pred: thethethethisthisthis this this this these these thesethesetheseThesethesethesethesetheytheytheyTheytheythey they they they them them them him him him he he he him him his his his her her her husband husband husband wife wife wife woman wife wife fiance wife wife bride wife wife widow wife\n",
+            "----------------------------------------\n",
+            "GT: nobody likes getting one hour of their life sucked away.\n",
+            "Pred: springspringspringpringpringpringspringspring spring spring spring Spring spring spring winter winter winter cold cold cold colder colder colder warmer warmer warmer hotter warmer warmer cooler cooler cooler nicer nicer nicer nice nice nice lovely nice nice cute cute cute adorable adorable adorable cute cute little cute cute fun fun fun interesting interesting interesting fascinating interesting interesting\n",
+            "----------------------------------------\n",
+            "\n",
+            "Evaluation Metrics on Validation Set:\n",
+            "ROUGE-1: 0.0182\n",
+            "ROUGE-2: 0.0003\n",
+            "ROUGE-L: 0.0174\n",
+            "BLEU: 0.0016\n",
+            "METEOR: 0.0200\n",
+            "BERTScore_F1: 0.7566\n",
+            "\n",
+            "Epoch 3/5\n",
+            "Training Loss: 0.1245\n",
+            "Validation Loss: 0.0139\n",
+            "\n",
+            "Sample Generated Explanations (Validation):\n",
+            "GT: the author is pissed at <user> for not getting network in malad.\n",
+            "Pred: UUU U U U u u uuuuauauau au au au o o o O O OOOOoOOOOOOOOoooooooooooooooooooooooooooooooooohoooooooooooooooooooooowwwwwwwww@@@ @ @\n",
+            "----------------------------------------\n",
+            "GT: nothing worst than waiting for an hour on the tarmac for a gate to come open in snowy, windy chicago.\n",
+            "Pred: ititit it it it they they they them them them me me me myself myself myself themselves themselves themselves herself herself herself himself himself himself him him him he he he she she she her her her hair hair hairhairhairhairairairairAirAirAir Air Air Air air air air flights flights planes planes\n",
+            "----------------------------------------\n",
+            "GT: nobody likes getting one hour of their life sucked away.\n",
+            "Pred: springspringspringpringspringspring spring spring spring summer summer summer season season season seasons seasons seasons months months monthsmonthsmonthsmonthsmonthmonthmonthMonthMonthMonth month month month semester semester semester university university university campus campus campus campuses campuses campuses universities universities universities colleges universities universities institutions universities universities Universities universities universities schools universities universities professors\n",
+            "----------------------------------------\n",
+            "\n",
+            "Evaluation Metrics on Validation Set:\n",
+            "ROUGE-1: 0.0206\n",
+            "ROUGE-2: 0.0000\n",
+            "ROUGE-L: 0.0195\n",
+            "BLEU: 0.0019\n",
+            "METEOR: 0.0164\n",
+            "BERTScore_F1: 0.7565\n",
+            "\n",
+            "Epoch 4/5\n",
+            "Training Loss: 0.0321\n",
+            "Validation Loss: 0.0064\n",
+            "\n",
+            "Sample Generated Explanations (Validation):\n",
+            "GT: the author is pissed at <user> for not getting network in malad.\n",
+            "Pred: <<< < < <><><><>:>:>: : : ::::;;; ; ; ; . . .....: : : @ @ @@ @ @ at at atAt at at At at at AT AT ATATATATatatatatsatsatesates\n",
+            "----------------------------------------\n",
+            "GT: nothing worst than waiting for an hour on the tarmac for a gate to come open in snowy, windy chicago.\n",
+            "Pred: openopenopenOpenopenopen open open open opened opened opened opening opening opening Opening opening opening closing closing closing shutting shutting shutting shut shut shut closed closed closed locked locked locked locking locking lockinglocking locking locking unlocking unlocking unlocking unlock unlock unlock Unlock unlock unlock unlocked unlocked unlocked unlocks unlock unlock unleash unleash unleash unle unle unlock unlock\n",
+            "----------------------------------------\n",
+            "GT: nobody likes getting one hour of their life sucked away.\n",
+            "Pred: springspringspringpringspringspring spring spring spring summer summer summer season season season seasons seasons seasons months seasons seasons Seasons Seasons Seasons Season seasons seasons races races races race races races Races Races Races races races cars cars cars car cars cars automobiles automobiles automobiles cars carscars cars cars vehicles cars cars trucks cars cars drivers cars cars\n",
+            "----------------------------------------\n",
+            "\n",
+            "Evaluation Metrics on Validation Set:\n",
+            "ROUGE-1: 0.0204\n",
+            "ROUGE-2: 0.0005\n",
+            "ROUGE-L: 0.0202\n",
+            "BLEU: 0.0022\n",
+            "METEOR: 0.0182\n",
+            "BERTScore_F1: 0.7565\n",
+            "\n",
+            "Epoch 5/5\n",
+            "Training Loss: 0.0311\n",
+            "Validation Loss: 0.0103\n",
+            "\n",
+            "Sample Generated Explanations (Validation):\n",
+            "GT: the author is pissed at <user> for not getting network in malad.\n",
+            "Pred: thisthisthisThisthisthis this this this these these thesethesethesetheseThese these these These these these THESE these these those those thosethosethosethoseThosethosethosethesethesethethetheTheTheThe TheTheThe the the the The The TheThe The The the theTheTheTHETheThethe\n",
+            "----------------------------------------\n",
+            "GT: nothing worst than waiting for an hour on the tarmac for a gate to come open in snowy, windy chicago.\n",
+            "Pred: thethetheTheTheThe TheTheThe the the the THE The The TheThe The ThethetheTHETheThethethenotnotnotNotNotNotnotnotntntnttttontontontotototetotottototoTOTOTOOTOTODODODO\n",
+            "----------------------------------------\n",
+            "GT: nobody likes getting one hour of their life sucked away.\n",
+            "Pred: springspringspring spring spring spring summer summer summer winter winter winter season season season seasons seasons seasons Seasons Seasons Seasons seasons seasons months seasons seasons summers seasons seasons days weekends weekends weekends weekend weekends weekends Sundays Sundays Sundays weekends weekends mornings weekends weekends Saturdays Sundays Sundays Mondays Sundays Sundays Sunday Sundays Sundays holidays weekends weekends nights weekends weekends sessions weekends\n",
+            "----------------------------------------\n",
+            "\n",
+            "Evaluation Metrics on Validation Set:\n",
+            "ROUGE-1: 0.0332\n",
+            "ROUGE-2: 0.0004\n",
+            "ROUGE-L: 0.0323\n",
+            "BLEU: 0.0033\n",
+            "METEOR: 0.0258\n",
+            "BERTScore_F1: 0.7551\n"
           ]
         }
       ],
@@ -497,14 +610,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 23,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Using device: cuda:0\n",
+            "Using device: cuda:0\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
             "Loading model checkpoint from checkpoints/best_model.pt\n"
           ]
         },
@@ -515,8 +634,8 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-            "Cell \u001b[0;32mIn[12], line 14\u001b[0m\n\u001b[1;32m     11\u001b[0m parser\u001b[38;5;241m.\u001b[39madd_argument(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m--checkpoint_path\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28mtype\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mstr\u001b[39m, default\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcheckpoints/best_model.pt\u001b[39m\u001b[38;5;124m\"\u001b[39m, help\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPath to the model checkpoint for testing\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     13\u001b[0m args, unknown \u001b[38;5;241m=\u001b[39m parser\u001b[38;5;241m.\u001b[39mparse_known_args()\n\u001b[0;32m---> 14\u001b[0m \u001b[43mmain\u001b[49m\u001b[43m(\u001b[49m\u001b[43margs\u001b[49m\u001b[43m)\u001b[49m\n",
-            "Cell \u001b[0;32mIn[10], line 36\u001b[0m, in \u001b[0;36mmain\u001b[0;34m(args)\u001b[0m\n\u001b[1;32m     34\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCheckpoint path must be provided in test mode using --checkpoint_path\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     35\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mLoading model checkpoint from \u001b[39m\u001b[38;5;132;01m{\u001b[39;00margs\u001b[38;5;241m.\u001b[39mcheckpoint_path\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m---> 36\u001b[0m model\u001b[38;5;241m.\u001b[39mload_state_dict(\u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload\u001b[49m\u001b[43m(\u001b[49m\u001b[43margs\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcheckpoint_path\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmap_location\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdevice\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[1;32m     37\u001b[0m \u001b[38;5;66;03m# Run inference on the test data\u001b[39;00m\n\u001b[1;32m     38\u001b[0m test_df_path \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(args\u001b[38;5;241m.\u001b[39mdata_dir, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtest.tsv\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+            "Cell \u001b[0;32mIn[23], line 14\u001b[0m\n\u001b[1;32m     11\u001b[0m parser\u001b[38;5;241m.\u001b[39madd_argument(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m--checkpoint_path\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28mtype\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mstr\u001b[39m, default\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcheckpoints/best_model.pt\u001b[39m\u001b[38;5;124m\"\u001b[39m, help\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPath to the model checkpoint for testing\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     13\u001b[0m args, unknown \u001b[38;5;241m=\u001b[39m parser\u001b[38;5;241m.\u001b[39mparse_known_args()\n\u001b[0;32m---> 14\u001b[0m \u001b[43mmain\u001b[49m\u001b[43m(\u001b[49m\u001b[43margs\u001b[49m\u001b[43m)\u001b[49m\n",
+            "Cell \u001b[0;32mIn[22], line 36\u001b[0m, in \u001b[0;36mmain\u001b[0;34m(args)\u001b[0m\n\u001b[1;32m     34\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCheckpoint path must be provided in test mode using --checkpoint_path\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     35\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mLoading model checkpoint from \u001b[39m\u001b[38;5;132;01m{\u001b[39;00margs\u001b[38;5;241m.\u001b[39mcheckpoint_path\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m---> 36\u001b[0m model\u001b[38;5;241m.\u001b[39mload_state_dict(\u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload\u001b[49m\u001b[43m(\u001b[49m\u001b[43margs\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcheckpoint_path\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmap_location\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdevice\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[1;32m     37\u001b[0m \u001b[38;5;66;03m# Run inference on the test data\u001b[39;00m\n\u001b[1;32m     38\u001b[0m test_df_path \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(args\u001b[38;5;241m.\u001b[39mdata_dir, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtest.tsv\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
             "File \u001b[0;32m~/.local/lib/python3.8/site-packages/torch/serialization.py:986\u001b[0m, in \u001b[0;36mload\u001b[0;34m(f, map_location, pickle_module, weights_only, mmap, **pickle_load_args)\u001b[0m\n\u001b[1;32m    983\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mencoding\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m pickle_load_args\u001b[38;5;241m.\u001b[39mkeys():\n\u001b[1;32m    984\u001b[0m     pickle_load_args[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mencoding\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mutf-8\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m--> 986\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[43m_open_file_like\u001b[49m\u001b[43m(\u001b[49m\u001b[43mf\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mrb\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m opened_file:\n\u001b[1;32m    987\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m _is_zipfile(opened_file):\n\u001b[1;32m    988\u001b[0m         \u001b[38;5;66;03m# The zipfile reader is going to advance the current file position.\u001b[39;00m\n\u001b[1;32m    989\u001b[0m         \u001b[38;5;66;03m# If we want to actually tail call to torch.jit.load, we need to\u001b[39;00m\n\u001b[1;32m    990\u001b[0m         \u001b[38;5;66;03m# reset back to the original position.\u001b[39;00m\n\u001b[1;32m    991\u001b[0m         orig_position \u001b[38;5;241m=\u001b[39m opened_file\u001b[38;5;241m.\u001b[39mtell()\n",
             "File \u001b[0;32m~/.local/lib/python3.8/site-packages/torch/serialization.py:435\u001b[0m, in \u001b[0;36m_open_file_like\u001b[0;34m(name_or_buffer, mode)\u001b[0m\n\u001b[1;32m    433\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21m_open_file_like\u001b[39m(name_or_buffer, mode):\n\u001b[1;32m    434\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m _is_path(name_or_buffer):\n\u001b[0;32m--> 435\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m_open_file\u001b[49m\u001b[43m(\u001b[49m\u001b[43mname_or_buffer\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmode\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    436\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    437\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mw\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;129;01min\u001b[39;00m mode:\n",
             "File \u001b[0;32m~/.local/lib/python3.8/site-packages/torch/serialization.py:416\u001b[0m, in \u001b[0;36m_open_file.__init__\u001b[0;34m(self, name, mode)\u001b[0m\n\u001b[1;32m    415\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, name, mode):\n\u001b[0;32m--> 416\u001b[0m     \u001b[38;5;28msuper\u001b[39m()\u001b[38;5;241m.\u001b[39m\u001b[38;5;21m__init__\u001b[39m(\u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mname\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmode\u001b[49m\u001b[43m)\u001b[49m)\n",
