--- a/assignment3/task3/task3.ipynb
+++ b/assignment3/task3/task3.ipynb
@@ -370,7 +370,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "id": "cp_kgJC1pE4r"
       },
@@ -582,16 +582,16 @@
         "            for k, v in metrics.items():\n",
         "                print(f\"{k}: {v:.4f}\")\n",
         "\n",
-        "            # checkpoint_path = os.path.join(args.checkpoint_dir, f\"model_epoch_{epoch+1}.pt\")\n",
-        "            # os.makedirs(args.checkpoint_dir, exist_ok=True)\n",
-        "            # torch.save(model.state_dict(), checkpoint_path)\n",
-        "            # print(f\"Model checkpoint saved to {checkpoint_path}\")\n",
+        "            checkpoint_path = os.path.join(args.checkpoint_dir, f\"model_epoch_{epoch+1}.pt\")\n",
+        "            os.makedirs(args.checkpoint_dir, exist_ok=True)\n",
+        "            torch.save(model.state_dict(), checkpoint_path)\n",
+        "            print(f\"Model checkpoint saved to {checkpoint_path}\")\n",
         "\n",
         "            if avg_val_loss < best_val_loss:\n",
         "                best_val_loss = avg_val_loss\n",
-        "                # best_model_path = os.path.join(args.checkpoint_dir, \"best_model.pt\")\n",
-        "                # torch.save(model.state_dict(), best_model_path)\n",
-        "                # print(\"Best model updated.\")\n",
+        "                best_model_path = os.path.join(args.checkpoint_dir, \"best_model.pt\")\n",
+        "                torch.save(model.state_dict(), best_model_path)\n",
+        "                print(\"Best model updated.\")\n",
         "\n",
         "if __name__ == \"__main__\":\n",
         "    parser = argparse.ArgumentParser(description=\"Multimodal Sarcasm Explanation (MuSE) Task\")\n",
